[gd_scene load_steps=3 format=3 uid="uid://m8xjjb0e3g1t"]

[ext_resource type="Script" path="res://Scripts/Shop.gd" id="1_k8np1"]
[ext_resource type="Texture2D" uid="uid://ckfasjsi5krbd" path="res://Assets/16x16 RPG Item Pack/Item__00.png" id="3_kp1aj"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_k8np1")

[node name="Panel" type="Panel" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 576.0
metadata/_edit_lock_ = true

[node name="Shop_items" type="GridContainer" parent="."]
offset_left = 760.0
offset_top = 256.0
offset_right = 944.0
offset_bottom = 368.0
columns = 2

[node name="item_info" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 192.0
offset_bottom = 128.0

[node name="Name" type="Label" parent="item_info"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 41
text = "Item Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="item_info"]
layout_mode = 0
offset_top = 256.0
offset_right = 320.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 22
text = "Item Desc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="item_info"]
position = Vector2(152, 160)
scale = Vector2(10, 10)
texture = ExtResource("3_kp1aj")

[node name="Buy" type="Button" parent="."]
offset_left = 440.0
offset_top = 504.0
offset_right = 601.0
offset_bottom = 552.0
text = "Buy"

[node name="Close" type="Button" parent="."]
offset_left = 912.0
offset_top = 512.0
offset_right = 1073.0
offset_bottom = 560.0
text = "Close"

[connection signal="pressed" from="Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
